Fixed collapsed rank name box

--- a/style.css
+++ b/style.css
@@ -336,6 +336,7 @@ nav div {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
+	min-width: 1.2rem;
 }
 
 .rankNumberText {
